language/move-lang/tests/move_check/translated_ir_tests/borrow_tests/borrow_global_acquires_invalid_2.exp
error: 

   ┌── tests/move_check/translated_ir_tests/borrow_tests/borrow_global_acquires_invalid_2.move:9:9 ───
   │
 9 │         acquires_t1();
   │         ^^^^^^^^^^^^^ Invalid acquiring of resource 'T1'
   ·
 7 │         let x = borrow_global_mut<T1>(Transaction::sender());
   │                 -------------------------------------------- It is still being mutably borrowed by this reference
   │

error: 

    ┌── tests/move_check/translated_ir_tests/borrow_tests/borrow_global_acquires_invalid_2.move:16:9 ───
    │
 16 │         acquires_t1();
    │         ^^^^^^^^^^^^^ Invalid acquiring of resource 'T1'
    ·
 14 │         let x = borrow_global_mut<T1>(Transaction::sender());
    │                 -------------------------------------------- It is still being mutably borrowed by this reference
    │

error: 

    ┌── tests/move_check/translated_ir_tests/borrow_tests/borrow_global_acquires_invalid_2.move:22:9 ───
    │
 22 │         acquires_t1();
    │         ^^^^^^^^^^^^^ Invalid acquiring of resource 'T1'
    ·
 21 │         let x = borrow_global_mut<T1>(Transaction::sender());
    │                 -------------------------------------------- It is still being mutably borrowed by this reference
    │

